[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "fsdp-qlora"
authors = [
    {name = "Chris Brousseau", email = "chrisbrousseau304+fsdpqlora@gmail.com"},
    {name = "Tanner Davis", email = "cholojuanito.dev+fsdpqlora@gmail.com"}
]
description = "Package for training big freaking models on your small GPUs"
requires-python = ">=3.11.8"
keywords = ["qlora", "fsdp"]
readme = "README.md"
version = "0.0.1"
dependencies = [
    "torch>2.2",
    "llama-recipes",
    "fastcore",
    "bitsandbytes>=0.43.0"
]

[project.urls]
Homepage = "https://github.com/IMJONEZZ/FDSP_QLORA"